--- a/css/style.scss
+++ b/css/style.scss
@@ -1,67 +1,96 @@
+@import "mixins";
+@import "fonts";
+
+/* < --- VARIABLES --- > */
+
+$bg-color: #0e0e0e;
+$text-color: #ffffff;
+$accent-color: #160598;
+$text-accent: #ff5a66;
+
+$font-size: 14px;
+
+/* < --- RESET CSS --- > */
 * {
-	padding: 0px;
-	margin: 0px;
-	border: none;
+    padding: 0px;
+    margin: 0px;
+    border: none;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* Links */
-
-a, a:link, a:visited  {
+a,
+a:link,
+a:visited {
     text-decoration: none;
 }
 
-a:hover  {
+a:hover {
     text-decoration: none;
 }
 
 /* Common */
-
-aside, nav, footer, header, section, main {
-	display: block;
+aside,
+nav,
+footer,
+header,
+section,
+main {
+    display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     font-size: inherit;
-	font-weight: inherit;
+    font-weight: inherit;
 }
 
-ul, ul li {
-	list-style: none;
+ul,
+ul li {
+    list-style: none;
 }
 
 img {
-	vertical-align: top;
+    vertical-align: top;
 }
 
-img, svg {
-	max-width: 100%;
-	height: auto;
+img,
+svg {
+    max-width: 100%;
+    height: auto;
 }
 
 address {
-  font-style: normal;
+    font-style: normal;
 }
 
 /* Form */
-
-input, textarea, button, select {
-	font-family: inherit;
+input,
+textarea,
+button,
+select {
+    font-family: inherit;
     font-size: inherit;
     color: inherit;
     background-color: transparent;
 }
 
 input::-ms-clear {
-	display: none;
+    display: none;
 }
 
-button, input[type="submit"] {
+button,
+input[type="submit"] {
     display: inline-block;
     box-shadow: none;
     background-color: transparent;
@@ -69,20 +98,123 @@ button, input[type="submit"] {
     cursor: pointer;
 }
 
-input:focus, input:active,
-button:focus, button:active {
+input:focus,
+input:active,
+button:focus,
+button:active {
     outline: none;
 }
 
 button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
+    padding: 0;
+    border: 0;
 }
 
 label {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 legend {
-	display: block;
+    display: block;
 }
+/* < ---/ RESET CSS /--- > */
+
+body {
+    color: $text-color;
+    font-family: "Gotham Pro";
+    font-weight: 300;
+    font-size: $font-size;
+}
+
+a {
+    color: $text-color;
+}
+
+/* < --- HEADER --- > */
+.container {
+    max-width: 1296px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+.header {
+    background: $bg-color;
+    padding: 65px 0;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.logo {
+    &__image {
+        // width: 300px;
+    }
+}
+.menu {
+    &__list {
+        display: flex;
+        align-items: center;
+        gap: 65px;
+    }
+    &__link {
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+.button {
+    border: 1px solid $text-color;
+    border-radius: 142px;
+    padding: 15px 32px;
+    &:hover {
+        text-decoration: underline;
+        background-color: $accent-color;
+        border: 1px solid $accent-color;
+        text-decoration: none;
+        transition-property: background-color, border;
+        transition-duration: 0.3s;
+    }
+}
+/* < ---/ HEADER /--- > */
+
+/* < --- FLOW --- > */
+.flow {
+    background-color: $bg-color;
+    text-align: center;
+    &__title {
+        position: relative;
+        font-size: 70px;
+        font-weight: 700;
+        text-transform: uppercase;
+        line-height: 1.177em;
+        letter-spacing: 0.03em;
+        vertical-align: sub;
+        & > .text-accent {
+            position: relative;
+            z-index: 0;
+            &::after {
+                content: "";
+                position: absolute;
+                display: block;
+                width: 4.9em;
+                height: 0.957em;
+                background-color: $text-accent;
+                left: 50%;
+                top: calc(50% - 0.09em);
+                transform: translate(-50%, -50%);
+                z-index: -1;
+                border-radius: 0.829em;
+            }
+        }
+		& > .arrow {
+			display: inline-block;
+			width: 49px;
+			aspect-ratio: 1;
+			background-image: url("../src/icons/arrow.svg");
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: 50%;
+		}
+    }
+}
+/* < ---/ FLOW /--- > */
